--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,6 @@
   "livePreview": false,
   "alwaysUpdateLinks": false,
   "attachmentFolderPath": "圖庫",
-  "readableLineLength": true
+  "readableLineLength": true,
+  "userIgnoreFilters": []
 }
