--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,5 @@
 {
-  "defaultViewMode": "source",
+  "defaultViewMode": "preview",
   "strictLineBreaks": true,
   "promptDelete": true,
   "livePreview": false,
