--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -20,6 +20,5 @@
     "margin": "0",
     "downscalePercent": 100
   },
-  "showUnsupportedFiles": false,
-  "showRibbon": true
+  "showUnsupportedFiles": false
 }
